[package]
name = "Crawchain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
p256 = { version = "0.10", features = ["ecdsa"] }
rand = "0.8"
rand_core = "0.6"
chrono = "0.4"
wasmer = "2.2.0"
hex = "0.4"

[[bin]]
name = "Crawchain"
path = "main.rs"
